[package]
name = "cluster_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.33"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.43.0", features = ["full"] }
trade_aggregation = "12.0.1"
ureq = "2.10.1"
